--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".WriteActivity"
                 android:exported="true">
-
+        </activity>
+        <activity android:name=".ListActivity"
+            android:exported="true">
+        </activity>
+        <activity android:name=".CalenderActivity"
+            android:exported="true">
         </activity>
     </application>
 
